force-app/main/default/objects/Exchange_Rate__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <label>Base Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>