force-app/main/default/objects/Exchange_Rate__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique identifier for upsert operations (BaseCurrency_TargetCurrency)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>