force-app/main/default/objects/Exchange_Rate__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>When the exchange rate was last updated</description>
    <label>Last Updated</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>