force-app/main/default/objects/Exchange_Rate__c/fields/Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>Target_Currency__c</fullName>
    <description>The target currency code (e.g., EUR)</description>
    <label>Target Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>